[gd_scene load_steps=11 format=3 uid="uid://cyk50v17psa7f"]

[ext_resource type="Script" path="res://core/game/core_minigame.gd" id="1_dekye"]
[ext_resource type="AudioStream" uid="uid://bn4hgj44wv03l" path="res://resources/sound/music/stages/pengu/mus_pengu_waiting.wav" id="2_cnrsx"]
[ext_resource type="FontFile" uid="uid://bdhq7gk7o2i57" path="res://resources/fonts/OpenSans-Regular.ttf" id="3_b72fu"]
[ext_resource type="Texture2D" uid="uid://bvamuv8by3jh8" path="res://resources/texture/Flat-Icons.com-Flat-Clock.svg" id="3_bsm3h"]

[sub_resource type="Animation" id="Animation_us8ru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2y12s"]
resource_name = "pulse"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.27456, 1),
"update": 0,
"values": [Vector2(1, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikbaq"]
_data = {
"RESET": SubResource("Animation_us8ru"),
"pulse": SubResource("Animation_2y12s")
}

[sub_resource type="Animation" id="Animation_f7jum"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(77, 492)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_o6n4p"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.482968, 1),
"update": 0,
"values": [Vector2(77, 492), Vector2(90, 450)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cnlkp"]
_data = {
"RESET": SubResource("Animation_f7jum"),
"fade": SubResource("Animation_o6n4p")
}

[node name="core_minigame" type="Node2D"]
script = ExtResource("1_dekye")
main_music = ExtResource("2_cnrsx")

[node name="music_player" type="AudioStreamPlayer" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="clock" type="Node2D" parent="UI"]
position = Vector2(58.25, 638)

[node name="clock_animator" type="AnimationPlayer" parent="UI/clock"]
root_node = NodePath("../sprite")
libraries = {
"": SubResource("AnimationLibrary_ikbaq")
}

[node name="sprite" type="Sprite2D" parent="UI/clock"]
scale = Vector2(0.182617, 0.182617)
texture = ExtResource("3_bsm3h")
offset = Vector2(0, -250)

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 77.0
offset_top = 492.0
offset_right = 124.0
offset_bottom = 564.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_b72fu")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="beat_animator" type="AnimationPlayer" parent="UI/Label"]
libraries = {
"": SubResource("AnimationLibrary_cnlkp")
}

[connection signal="finished" from="music_player" to="." method="_on_music_player_finished"]
